Implement tooltips using javascript and complete project and tasks section

--- a/style.css
+++ b/style.css
@@ -86,3 +86,8 @@ body {
   box-shadow: 2px 3px 15px #999;
   transform: translateY(-1px);
 }
+/* Tasks */
+
+.task-border {
+  border-left: 3px solid #f66436;
+}
